Bug 115198 - event clientX and clientY coordinates are wrong if the event occurs within a child window.  r=sfraser, sr=blizzard.